--- a/src/html/components/logo.hbs
+++ b/src/html/components/logo.hbs
@@ -21,7 +21,7 @@ description: The one and the only.
   {{/embed}}
 
 
-  {{#embed "layouts/article" title="Kapp-Hamburg" description="The very special branding logo with a hover twist."}}
+  {{#embed "layouts/article" title="Kapp-Hamburg" description="The very special branding logo with a hover twist." body-class="dark"}}
   {{#content "body"}}
     {{> includes/logo-kapp-hamburg}}
   {{/content}}
