--- a/src/html/partials/includes/action-bar-settings.hbs
+++ b/src/html/partials/includes/action-bar-settings.hbs
@@ -1,6 +1,6 @@
 <div class="c-action-bar">
   <div class="c-action-bar__group  u-hide-md u-hide-lg u-hide-xl">
-    <button class="c-icon-button  c-menu-button  js-menu-button">
+    <button class="c-icon-button  js-menu-button">
       <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#menu"/></svg>
       <span class="u-sr-only">Open Menu</span>
     </button>
