--- a/src/html/partials/includes/footer-logged-in.hbs
+++ b/src/html/partials/includes/footer-logged-in.hbs
@@ -1,4 +1,4 @@
-<footer class="c-footer u-sr-only-below-md">
+<footer class="c-footer">
   {{> includes/logo-kapp-hamburg}}
 
   <nav class="c-footer-nav">
