--- a/src/css/components/_box.scss
+++ b/src/css/components/_box.scss
@@ -7,28 +7,33 @@
 .c-box {
   display: flex;
   flex-direction: column;
-
-  // Set component size
-  font-size: 1rem;
 }
 
   .c-box__title {
     margin: 0;
-    padding: 0.8em 1rem;
+    padding: 0.6rem;
 
     font-size: 1.3em;
     font-weight: 100;
     color: $color-white;
 
     background-color: $color-shadow;
+
+    @media (min-width: $break-sm-min) {
+      padding: 1rem;
+    }
   }
 
   .c-box__content {
     margin: 0;
-    padding: 1em 1rem;
+    padding: 0.6rem;
 
     font-size: 1em;
     color: $color-charcoal;
 
     background-color: $color-mist;
+
+    @media (min-width: $break-sm-min) {
+      padding: 1rem;
+    }
   }
