Rename some stuff for consistency

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -65,8 +65,8 @@ Naming convention for CSS classes
 @import 'components/header';
 @import 'components/list';
 @import 'components/logo';
+@import 'components/nav-sidebar';
 @import 'components/notification';
-@import 'components/side-nav';
 
 
 // SHAME
