--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -67,6 +67,7 @@ Naming convention for CSS classes
 @import 'components/logo';
 @import 'components/nav-sidebar';
 @import 'components/notification';
+@import 'components/pagination';
 
 
 // SHAME
