Medium devices have too little space for the sidebar navigation

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -67,5 +67,5 @@ $break-xl-min:  $break-xl;                 // 1600px
 // =====================================
 
 $z-index-dropdown:     800;
-$z-index-side-nav:     900;
+$z-index-nav-sidebar:     900;
 $z-index-notification: 1000;
