--- a/src/html/pages/domains.hbs
+++ b/src/html/pages/domains.hbs
@@ -18,6 +18,8 @@ title: Domain List
     {{> includes/list-domain}}
   </ul>
 
+  {{> includes/pagination}}
+
   {{> includes/footer-logged-in}}
 
 {{/content}}
