--- a/src/html/partials/includes/nav-sidebar.hbs
+++ b/src/html/partials/includes/nav-sidebar.hbs
@@ -1,25 +1,25 @@
-<nav class="c-side-nav">
-  <ul class="c-side-nav__list">
-    <li class="c-side-nav__item">
-      <a href="#" class="c-side-nav__link c-side-nav__link--muted">
-        <svg class="c-side-nav__icon"><use xlink:href="{{rel}}img/icons.svg#arrow-back"/></svg>
+<nav class="c-nav-sidebar">
+  <ul class="c-nav-sidebar__list">
+    <li class="c-nav-sidebar__item">
+      <a href="#" class="c-nav-sidebar__link c-nav-sidebar__link--muted">
+        <svg class="c-nav-sidebar__icon"><use xlink:href="{{rel}}img/icons.svg#arrow-back"/></svg>
         Domain List
       </a>
     </li>
-    <li class="c-side-nav__item">
-      <a href="#" class="c-side-nav__link">Settings</a>
+    <li class="c-nav-sidebar__item">
+      <a href="#" class="c-nav-sidebar__link">Settings</a>
     </li>
-    <li class="c-side-nav__item">
-      <a href="#" class="c-side-nav__link">Accounts</a>
+    <li class="c-nav-sidebar__item">
+      <a href="#" class="c-nav-sidebar__link">Accounts</a>
     </li>
-    <li class="c-side-nav__item">
-      <a href="#" class="c-side-nav__link">Aliases</a>
+    <li class="c-nav-sidebar__item">
+      <a href="#" class="c-nav-sidebar__link">Aliases</a>
     </li>
-    <li class="c-side-nav__item">
-      <a href="#" class="c-side-nav__link">Mailing Lists</a>
+    <li class="c-nav-sidebar__item">
+      <a href="#" class="c-nav-sidebar__link">Mailing Lists</a>
     </li>
-    <li class="c-side-nav__item">
-      <a href="#" class="c-side-nav__link">Forwards</a>
+    <li class="c-nav-sidebar__item">
+      <a href="#" class="c-nav-sidebar__link">Forwards</a>
     </li>
   </ul>
 </nav>
