--- a/src/css/components/_nav-sidebar.scss
+++ b/src/css/components/_nav-sidebar.scss
@@ -1,10 +1,10 @@
-/* SIDE NAV
+/* NAV SIDEBAR
  * Context-sensitive links for additional actions.
 ============================================================================= */
 
 
 
-.c-side-nav {
+.c-nav-sidebar {
   display: flex;
   position: relative;
   height: 100%;
@@ -24,78 +24,88 @@
   }
 }
 
-  .c-side-nav__list {
-    margin: 0;
-    padding: 0;
 
-    background-color: $color-mist;
+// Nav Sidebar List
 
-    @media (min-width: $break-md-min) {
-      flex-grow: 1;
+.c-nav-sidebar__list {
+  margin: 0;
+  padding: 0;
+
+  background-color: $color-mist;
+
+  @media (min-width: $break-lg-min) {
+    flex-grow: 1;
+  }
+}
+
+
+// Nav Sidebar Item
+
+.c-nav-sidebar__item {
+  display: block;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    height: 1px;
+    bottom: 0;
+    left: 0.6rem;
+    right: 0.6rem;
+
+    background-color: rgba(0, 0, 0, 0.1);
+
+    @media (min-width: $break-sm-min) {
+      left: 1rem;
+      right: 1rem;
     }
   }
+}
 
-    .c-side-nav__item {
-      display: block;
-      position: relative;
 
-      &::after {
-        content: '';
-        position: absolute;
-        height: 1px;
-        bottom: 0;
-        left: 0.6rem;
-        right: 0.6rem;
+// Nav Sidebar Link
 
-        background-color: rgba(0, 0, 0, 0.1);
+.c-nav-sidebar__link {
+  display: flex;
+  align-items: center;
+  padding: 1em 2.4rem 1em 0.6rem;
 
-        @media (min-width: $break-md-min) {
-          left: 1rem;
-          right: 1rem;
-        }
-      }
-    }
+  outline: none;
 
-      .c-side-nav__link {
-        display: flex;
-        align-items: center;
-        padding: 1em 1.8rem 1em 0.6em;
+  font-size: 1em;
+  font-weight: 100;
+  text-decoration: none;
+  color: $color-charcoal;
 
-        outline: none;
+  &:hover,
+  &:focus {
+    color: $color-white;
+    background-color: $color-orange;
+  }
 
-        font-size: 1em;
-        font-weight: 100;
-        text-decoration: none;
-        color: $color-charcoal;
+  @media (min-width: $break-sm-min) {
+    padding-left: 1rem;
+    font-size: 1.2em;
+  }
 
-        &:hover,
-        &:focus {
-          color: $color-white;
-          background-color: $color-orange;
-        }
+  @media (min-width: $break-lg-min) {
+    padding: 0 1rem;
+    height: 4em;
+    font-size: 1.3em;
+  }
+}
 
-        @media (min-width: $break-sm-min) {
-          padding: 1em 2.4rem 1em 0.6em;
+.c-nav-sidebar__link--muted {
+  color: $color-shadow;
+}
 
-          font-size: 1.2em;
-        }
 
-        @media (min-width: $break-md-min) {
-          padding: 0 1rem;
-          height: 4em;
+// Nav Sidebar Icon
 
-          font-size: 1.3em;
-        }
-      }
+.c-nav-sidebar__icon {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.2em;
 
-      .c-side-nav__link--muted {
-        color: $color-shadow;
-      }
-
-        .c-side-nav__icon {
-          width: 1em;
-          height: 1em;
-          margin-right: 0.2em;
-
-          fill: currentColor;
-        }
+  fill: currentColor;
+}
