--- a/src/css/components/_pagination.scss
+++ b/src/css/components/_pagination.scss
@@ -7,6 +7,11 @@
 .c-pagination {
   display: flex;
   flex-direction: column;
+  margin: 0 0.6rem;
+
+  @media (min-width: $break-sm-min) {
+    margin: 0 1rem;
+  }
 
   @media (min-width: $break-md-min) {
     flex-direction: row;
