--- a/src/css/base/_scaffolding.scss
+++ b/src/css/base/_scaffolding.scss
@@ -8,6 +8,8 @@
 
 
 html {
+  height: 100%;
+
   font-size: $font-size-xs; // Cf. _variables.scss for pixel values
   font-family: $font-stack;
 
@@ -18,4 +20,9 @@ html {
   @media (min-width: $break-md-min) {
     font-size: $font-size-md;
   }
+}
+
+
+body {
+  height: 100%;
 }
