--- a/src/html/partials/includes/nav-sidebar.hbs
+++ b/src/html/partials/includes/nav-sidebar.hbs
@@ -13,7 +13,7 @@
       <a href="#" class="c-nav-sidebar__link">Accounts</a>
     </li>
     <li class="c-nav-sidebar__item">
-      <a href="#" class="c-nav-sidebar__link">Aliases</a>
+      <a href="#" class="c-nav-sidebar__link c-nav-sidebar__link--highlight">Aliases</a>
     </li>
     <li class="c-nav-sidebar__item">
       <a href="#" class="c-nav-sidebar__link">Mailing Lists</a>
