--- a/src/html/pages/domains.hbs
+++ b/src/html/pages/domains.hbs
@@ -14,11 +14,11 @@ title: Domain List
 
     <div class="l-container__row l-container__row--grow">
 
-      <div class="l-container__item l-container__item--20">
+      <div class="l-container__item">
         {{> includes/nav-sidebar}}
       </div>
 
-      <div class="l-container__item l-container__item--80">
+      <div class="l-container__item">
         {{> includes/nav-horizontal-filter}}
 
         <ul class="c-list">
