Switch some stuff around: no longer one grid to rule them all

--- a/src/css/components/_nav-sidebar.scss
+++ b/src/css/components/_nav-sidebar.scss
@@ -6,8 +6,10 @@
 
 .c-nav-sidebar {
   display: flex;
-  position: relative;
-  height: 100%;
+  position: absolute;
+  width: 100%;
+
+  z-index: $z-index-nav-sidebar;
 
   &::before {
     content: '';
@@ -24,8 +26,7 @@
   }
 
   @media (min-width: $break-lg-min) {
-    display: inline-flex;
-    min-width: 280px;
+    position: relative;
   }
 }
 
