--- a/src/css/components/_pagination.scss
+++ b/src/css/components/_pagination.scss
@@ -7,10 +7,10 @@
 .c-pagination {
   display: flex;
   flex-direction: column;
-  margin: 0 0.6rem;
+  margin: 2rem 0.6rem;
 
   @media (min-width: $break-sm-min) {
-    margin: 0 1rem;
+    margin: 2rem 1rem;
   }
 
   @media (min-width: $break-md-min) {
