--- a/src/html/partials/includes/header-default.hbs
+++ b/src/html/partials/includes/header-default.hbs
@@ -5,7 +5,7 @@
 
   <div class="c-action-bar__group c-action-bar__group--grow  c-notification-container"></div>
 
-  <div class="c-action-bar__group">
+  <div class="c-action-bar__group c-action-bar__group--shrink">
     {{> includes/dropdown-form}}
   </div>
 
