--- a/src/html/partials/includes/header-notification-success.hbs
+++ b/src/html/partials/includes/header-notification-success.hbs
@@ -3,11 +3,11 @@
     {{> includes/logo-header}}
   </div>
 
-  <div class="c-action-bar__group c-action-bar__group--grow  c-notification-container">
+  <div class="c-action-bar__group c-action-bar__group--shrink  c-notification-container">
     {{> includes/notification-success}}
   </div>
 
-  <div class="c-action-bar__group">
+  <div class="c-action-bar__group c-action-bar__group--shrink">
     {{> includes/dropdown-form}}
   </div>
 
