--- a/src/html/partials/includes/header-default.hbs
+++ b/src/html/partials/includes/header-default.hbs
@@ -1,9 +1,9 @@
 <header class="c-action-bar c-action-bar--dark">
-  <div class="c-action-bar__group c-action-bar__group--grow">
+  <div class="c-action-bar__group">
     {{> includes/logo-header}}
   </div>
 
-  <div class="c-action-bar__group c-action-bar__group--grow  c-notification-container"></div>
+  <div class="c-action-bar__group c-action-bar__group--flexible c-action-bar__group--top"></div>
 
   <div class="c-action-bar__group c-action-bar__group--shrink">
     {{> includes/dropdown-form}}
