--- a/src/html/partials/includes/header-notification-error.hbs
+++ b/src/html/partials/includes/header-notification-error.hbs
@@ -1,10 +1,12 @@
 <header class="c-action-bar c-action-bar--dark">
-  <div class="c-action-bar__group c-action-bar__group--grow">
+  <div class="c-action-bar__group">
     {{> includes/logo-header}}
   </div>
 
-  <div class="c-action-bar__group c-action-bar__group--shrink  c-notification-container">
-    {{> includes/notification-error}}
+  <div class="c-action-bar__group c-action-bar__group--flexible c-action-bar__group--top">
+    <div class="c-notification-container">
+      {{> includes/notification-error}}
+    </div>
   </div>
 
   <div class="c-action-bar__group c-action-bar__group--shrink">
