Finally a cross-browser solution for page layout

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -68,4 +68,6 @@ $break-xl-min:  $break-xl;                 // 1600px
 
 $z-index-nav-sidebar:  800;
 $z-index-dropdown:     900;
-$z-index-notification: 1000;
+$z-index-header:       1000;
+$z-index-footer:       1000;
+$z-index-notification: 2000;
