--- a/src/html/pages/domains.hbs
+++ b/src/html/pages/domains.hbs
@@ -11,25 +11,28 @@ title: Domain List
     </div>
 
     <div class="l-container__content">
-      {{> includes/nav-horizontal-filter}}
 
-      <ul class="c-list">
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain-inactive}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-        {{> includes/list-domain}}
-      </ul>
+      <main class="l-container__main">
+        {{> includes/nav-horizontal-filter}}
 
-      {{> includes/pagination}}
+        <ul class="c-list">
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain-inactive}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+          {{> includes/list-domain}}
+        </ul>
+
+        {{> includes/pagination}}
+      </main>
     </div>
 
     <div class="l-container__footer">
