--- a/src/html/pages/settings.hbs
+++ b/src/html/pages/settings.hbs
@@ -10,13 +10,13 @@ title: Settings
       {{> includes/header-default}}
     </div>
 
-    <div class="l-container__content l-container__content--flex">
+    <div class="l-container__content">
 
       <aside class="l-container__sidebar  js-sidebar">
         {{> includes/nav-sidebar}}
       </aside>
 
-      <main class="l-container__main">
+      <main class="l-container__main l-container__main--sidebar">
         {{> includes/nav-horizontal-title}}
 
         <div class="l-grid">
