--- a/src/css/components/_nav-sidebar.scss
+++ b/src/css/components/_nav-sidebar.scss
@@ -5,7 +5,6 @@
 
 
 .c-nav-sidebar {
-  width: 100%;
   height: 100%;
 
   &::before {
@@ -33,14 +32,24 @@
 // =====================================
 
 .c-nav-sidebar__list {
+  width: 75%;
   height: 100%;
   margin: 0;
   padding: 0;
 
   background-color: $color-mist;
 
+  @media (min-width: $break-sm-min) {
+    width: 60%;
+  }
+
+  @media (min-width: $break-md-min) {
+    display: inline-block;
+    width: auto;
+  }
+
   @media (min-width: $break-lg-min) {
-    flex-grow: 1;
+    display: block;
     border-right: 1px solid rgba(0, 0, 0, 0.1);
   }
 }
@@ -79,11 +88,10 @@
 .c-nav-sidebar__link {
   display: flex;
   align-items: center;
-  padding: 1em 2.4rem 1em 0.6rem;
+  padding: 1em 0.6rem;
 
   outline: none;
 
-  font-size: 1em;
   font-weight: 100;
   text-decoration: none;
   color: $color-charcoal;
@@ -96,13 +104,15 @@
 
   @media (min-width: $break-sm-min) {
     padding-left: 1rem;
-    font-size: 1.2em;
+  }
+
+  @media (min-width: $break-md-min) {
+    padding-right: 4rem;
   }
 
   @media (min-width: $break-lg-min) {
     padding: 0 1rem;
-    height: 3.0769230769em;
-    font-size: 1.3em;
+    height: 4em;
   }
 }
 
