--- a/src/html/pages/aliases.hbs
+++ b/src/html/pages/aliases.hbs
@@ -10,19 +10,27 @@ title: Aliases
       {{> includes/header-default}}
     </div>
 
-    <div class="l-container__content l-container__content--flex">
+    <div class="l-container__content">
 
       <aside class="l-container__sidebar  js-sidebar">
         {{> includes/nav-sidebar}}
       </aside>
 
-      <main class="l-container__main">
+      <main class="l-container__main l-container__main--sidebar">
         {{> includes/nav-horizontal-filter}}
 
         <ul class="c-list">
           {{> includes/list-alias}}
           {{> includes/list-alias}}
           {{> includes/list-alias-inactive}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
+          {{> includes/list-alias}}
           {{> includes/list-alias}}
           {{> includes/list-alias}}
           {{> includes/list-alias}}
