--- a/src/html/partials/layouts/components.hbs
+++ b/src/html/partials/layouts/components.hbs
@@ -8,6 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="{{rel}}css/sg.css">
     <link rel="stylesheet" href="{{rel}}css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   </head>
   <body>
 
