--- a/src/html/partials/layouts/pages.hbs
+++ b/src/html/partials/layouts/pages.hbs
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{rel}}css/sg.css">
   {{/if}}
     <link rel="stylesheet" href="{{rel}}css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   </head>
   <body>
 
