Ditch columns, we don't want Pinterest

--- a/src/html/pages/settings.hbs
+++ b/src/html/pages/settings.hbs
@@ -19,12 +19,12 @@ title: Settings
       <main class="l-container__main l-container__main--sidebar">
         {{> includes/nav-horizontal-title}}
 
-        <div class="l-columns">
-          <div class="l-columns__item">{{> includes/box-form}}</div>
-          <div class="l-columns__item">{{> includes/box-text}}</div>
-          <div class="l-columns__item">{{> includes/box-login}}</div>
-          <div class="l-columns__item">{{> includes/box-form}}</div>
-          <div class="l-columns__item">{{> includes/box-text}}</div>
+        <div class="l-grid">
+          <div class="l-grid__item">{{> includes/box-form}}</div>
+          <div class="l-grid__item">{{> includes/box-text}}</div>
+          <div class="l-grid__item">{{> includes/box-login}}</div>
+          <div class="l-grid__item">{{> includes/box-form}}</div>
+          <div class="l-grid__item">{{> includes/box-text}}</div>
         </div>
       </main>
     </div>
