--- a/src/html/partials/includes/box-text.hbs
+++ b/src/html/partials/includes/box-text.hbs
@@ -3,6 +3,6 @@
   <div class="c-box__content">
     <p>A few paragraphs of random text that escaped the front-end dev's keyboard. Neither meaning nor sense will be discoverable. But real words and sentences are so much better than stupid lorem ipsum text.</p>
     <p>The following paragraph is an excerpt from the Wikipedia article about the Wikipdia:</p>
-    <p>Wikipedia (/ˌwɪkᵻˈpiːdiə/ or /ˌwɪkiˈpiːdiə/ wik-i-pee-dee-ə) is an Internet encyclopedia, supported and hosted by the non-profit Wikimedia Foundation. It is a free-of-cost encyclopedia with its articles being free-content; those who use Wikipedia can edit almost any article accessible. Wikipedia is ranked among the ten most popular websites, and constitutes the Internet's largest and most popular general reference work.</p>
+    <p>Wikipedia (/ˌwɪkᵻˈpiːdiə/ or /ˌwɪkiˈpiːdiə/ wik-i-pee-dee-ə) is an Internet encyclopedia, supported and hosted by the non-profit Wikimedia Foundation. It is a free-of-cost encyclopedia with its articles being free-content; those who use Wikipedia can edit almost any article accessible.</p>
   </div>
 </div>
