--- a/src/css/components/_box.scss
+++ b/src/css/components/_box.scss
@@ -7,6 +7,7 @@
 .c-box {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
   .c-box__title {
@@ -25,6 +26,7 @@
   }
 
   .c-box__content {
+    flex-grow: 1;
     margin: 0;
     padding: 0.6rem;
 
@@ -35,5 +37,11 @@
 
     @media (min-width: $break-sm-min) {
       padding: 1rem;
+    }
+
+    // Remove bottom margin from last element
+    // We already have a global box padding
+    > :last-child {
+      margin-bottom: 0;
     }
   }
