--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -50,8 +50,8 @@ Naming convention for CSS classes
 
 
 // LAYOUT
-@import 'layout/columns';
 @import 'layout/container';
+@import 'layout/grid';
 
 
 // BASE COMPONENTS
