Add login layout styling

--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -5,14 +5,22 @@ title: Login
 {{#extend "layouts/pages"}}
 {{#content "body"}}
 
-  <div class="c-logo c-logo--dark">
-    <svg class="c-logo__icon"><use xlink:href="{{rel}}img/logo.svg#logo"/></svg>
-    <span class="c-logo__text">MailAdmin</span>
+  <div class="l-login">
+    <div class="l-login__logo">
+      <div class="c-logo c-logo--dark">
+        <svg class="c-logo__icon"><use xlink:href="{{rel}}img/logo.svg#logo"/></svg>
+        <span class="c-logo__text">MailAdmin</span>
+      </div>
+    </div>
+
+    <div class="l-login__form">
+      {{> includes/box-login}}
+    </div>
+
+    <div class="l-login__footer">
+      {{> includes/footer-login}}
+    </div>
   </div>
-
-  {{> includes/box-login}}
-
-  {{> includes/footer-login}}
 
 {{/content}}
 {{/extend}}
