--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -52,6 +52,7 @@ Naming convention for CSS classes
 // LAYOUT
 @import 'layout/container';
 @import 'layout/grid';
+@import 'layout/login';
 
 
 // BASE COMPONENTS
